tests/errors/test_35.x
// Excess elements in array initialiser

let x: int[2] = [1, 2, 3, 4];

fn main() -> int {

    let y: char[1] = ['a', 'b'];

}